--- a/src/app/shared/boards/general-information/general-information.component.scss
+++ b/src/app/shared/boards/general-information/general-information.component.scss
@@ -11,7 +11,7 @@
   align-items: center;
   color: map-get($colors, text-primary);
   font-size: larger;
-  margin-bottom: 2rem;
+  margin: 2rem auto;
 
 
   &.h1{
