--- a/src/app/shared/core/sidebar/sidebar.component.scss
+++ b/src/app/shared/core/sidebar/sidebar.component.scss
@@ -3,12 +3,13 @@
 .navbar-vertical {
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
-  justify-content: space-between;
+  justify-content: center; // Centra los elementos verticalmente
+  align-items: center; // Centra los elementos horizontalmente
   flex-direction: column;
   position: fixed;
   display: flex;
   left: 0;
-  width: 250px; // Ancho del sidebar
+  width: 80px; // Ancho del sidebar
   height: 100%;
   background: map-get($colors, primary-dark);
   margin-top: -12px;
@@ -44,7 +45,8 @@
     font-size: larger;
 
     &:hover {
-      background: darken(#333, 10%);
+      background: map-get($map: $colors, $key: accent-secondary);
+      border-radius: 20%;
     }
   }
   .sing-out{
