feature: header was added

--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -1,8 +1,10 @@
-
 <app-sidebar
 (sidebarToggle)="handleSidebarToggle($event)">
 </app-sidebar>
+
 <div class="main-content" [class.active]="!isSidebarActive">
+  <app-header></app-header>
+
   <div class="grid-container">
     <app-general-information></app-general-information>
     <app-progress-card
