--- a/src/app/shared/core/sidebar/sidebar.component.html
+++ b/src/app/shared/core/sidebar/sidebar.component.html
@@ -25,8 +25,7 @@
 
   </nav>
   <a href="auth/login" class="sing-out" (click)="onSignOut()">
-    <img src="../../../../../assets/icons/wallet.svg" alt="">
-    Sing out
+    <img src="../../../../../assets/icons/box-arrow-left.svg" alt="">
   </a>
 </aside>
 
