--- a/src/app/shared/core/sidebar/sidebar.component.scss
+++ b/src/app/shared/core/sidebar/sidebar.component.scss
@@ -56,10 +56,10 @@
     padding: 10px;
     color: white;
     text-decoration: none;
-    font-size: larger;
 
     &:hover {
-      background: darken(#333, 10%);
+      background: map-get($map: $colors, $key: accent-primary);
+      border-radius: 20%;
     }
   }
 }
