--- a/src/app/shared/core/header/header.component.scss
+++ b/src/app/shared/core/header/header.component.scss
@@ -10,7 +10,7 @@
 
   .logo-section {
     display: flex;
-    align-items: center;
+    align-items: center;s
 
     .logo-text {
       font-size: x-large;
