--- a/src/app/modules/home/components/new-credit-card/new-credit-card.component.scss
+++ b/src/app/modules/home/components/new-credit-card/new-credit-card.component.scss
@@ -1,17 +1,20 @@
+@import '/src/styles/variables.scss';
+
+
 .main-content {
   padding: 2rem;
   transition: margin-left 0.8s;
-  margin-left: 250px; // Tamaño del sidebar abierto
+  margin-left: 80px;
 
   &.active {
-    margin-left: 0; // Tamaño del sidebar cerrado
+    margin-left: 0;
   }
 
   .grid-container {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
-    justify-content: center; // Espacio entre los elementos de la cuadrícula
+    justify-content: center;
 
     .grid-item {
       flex: 1 1 45%;
@@ -44,30 +47,33 @@
 .credit-card-box {
   width: 350px;
   padding: 35px;
-  background-color: #232a3a;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  color: #fff;
+  color: map-get($map: $colors, $key: text-primary);
 }
 
 .label-input{
-  font-size: 12px;
+  font-size: large;
 }
 
 .input{
   width: 100%;
   padding: 10px;
   margin-bottom: 10px;
-  border: none;
+  border-style: solid;
   border-radius: 5px;
-  background-color: #2f3b4c;
-  color: #fff;
+  border-width: 1px;
+  border-color: map-get($map: $colors, $key: text-secondary);
+  background-color: map-get($map: $colors, $key: secondary);
+  color: map-get($map: $colors, $key: text-primary);
   box-sizing: border-box;
   font-size: 13px;
 
   &.invalid{
     border: 2px solid #F44336;
   }
+
+
 }
 
 .submit-button{
@@ -85,7 +91,7 @@
   }
 }
 .submit-button:hover {
-  background-color: #464c5c;
+  background-color: map-get($map: $colors, $key: accent-secondary);
 }
 
 .loader-container{
