--- a/src/app/modules/home/components/new-transaction/new-transaction.component.scss
+++ b/src/app/modules/home/components/new-transaction/new-transaction.component.scss
@@ -3,17 +3,16 @@
 .main-content {
   padding: 2rem;
   transition: margin-left 0.8s;
-  margin-left: 80px; // Tamaño del sidebar abierto
-
+  margin-left: 80px;
   &.active {
-    margin-left: 0; // Tamaño del sidebar cerrado
+    margin-left: 0;
   }
 
   .grid-container {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
-    justify-content: center; // Espacio entre los elementos de la cuadrícula
+    justify-content: center;
 
     .grid-item {
       flex: 1 1 45%;
