feature: component historial created with basics

--- a/src/app/shared/core/sidebar/sidebar.component.html
+++ b/src/app/shared/core/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
       <img src="../../../../../assets/icons/graph-up.svg" alt="">
       </a>
 
-    <a href="#" class="nav-item">
+    <a href="historial" class="nav-item">
       <img src="../../../../../assets/icons/clock-history.svg" alt="">
       </a>
 
