--- a/src/app/modules/home/components/home/home.component.scss
+++ b/src/app/modules/home/components/home/home.component.scss
@@ -15,13 +15,20 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr); // Configura 2 elementos por fila
     gap: 2rem;
-    justify-content: center; // Espacio entre los elementos de la cuadrícula
-  }
+    justify-content: center;
 
-  @media (max-width: 768px) {
-    // En pantallas más pequeñas, cada elemento de la cuadrícula toma el ancho completo
-    .grid-container {
-      grid-template-columns: 1fr; // Configura 1 elemento por fila en pantallas pequeñas
+    .basic-information{
+      display: grid;
+      grid-template-rows: repeat(2, 1fr); // Configura 2 elementos por fila
+      gap: 2rem;
+      justify-content: center;
+      }
+
+    @media (max-width: 768px) {
+      // En pantallas más pequeñas, cada elemento de la cuadrícula toma el ancho completo
+      .grid-container {
+        grid-template-columns: 1fr; // Configura 1 elemento por fila en pantallas pequeñas
+      }
     }
   }
 }
