--- a/src/app/shared/boards/general-information/general-information.component.scss
+++ b/src/app/shared/boards/general-information/general-information.component.scss
@@ -1,10 +1,9 @@
 @import '/src/styles/variables.scss';
 
 .grid-item {
-  max-width: 300px;
-  min-height: 150px;
+  max-width: 600px;
+  max-height: 30px;
   border-radius: 8px;
-  padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
