--- a/src/app/shared/boards/general-information/general-information.component.html
+++ b/src/app/shared/boards/general-information/general-information.component.html
@@ -4,5 +4,8 @@
   </h1>
   <p>Now you can see all the information
     about your jineteo transacitions</p>
+  <h3>
+    Now you are on your {{cardName}} jineteo dashboard
+  </h3>
 </div>
 
