feature: creating payment progress bar

--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -13,6 +13,7 @@
     <app-progress-card
     [progressBarValue]="progressBarValue"
     [creditCardName]="creditCard.name"
+    [progressPaymentBarValue]="progressPaymentBarValue"
     ></app-progress-card>
     <app-calendar-card
     [currentMonth]="currentMonth"
