--- a/src/app/shared/boards/progress-card/progress-card.component.html
+++ b/src/app/shared/boards/progress-card/progress-card.component.html
@@ -1,12 +1,21 @@
 <div class="grid-item">
   <div class="card">
-    <p class="tittle">Progress with {{ creditCardName }}</p>
+    <p class="tittle">Jineteo with {{ creditCardName }}</p>
     <svg class="progress-circle" width="100" height="100" viewBox="0 0 100 100">
       <circle class="progress-circle-back" cx="50" cy="50" r="45" fill="none" stroke="#eee" stroke-width="10"/>
       <circle class="progress-circle-progress" cx="50" cy="50" r="45" fill="none"  stroke-width="10"
               stroke-linecap="round" [attr.stroke-dasharray]="circumference" [attr.stroke-dashoffset]="progressOffset"/>
     </svg>
     <span>{{ progressBarValue }}%</span>
+  </div>
+  <div class="payment-card">
+    <p class="tittle">Relax, you will do it</p>
+    <svg class="progress-circle" width="100" height="100" viewBox="0 0 100 100">
+      <circle class="progress-circle-back" cx="50" cy="50" r="45" fill="none" stroke="#eee" stroke-width="10"/>
+      <circle class="progress-circle-progress" cx="50" cy="50" r="45" fill="none"  stroke-width="10"
+              stroke-linecap="round" [attr.stroke-dasharray]="circumference" [attr.stroke-dashoffset]="paymentProgressOffset"/>
+    </svg>
+    <span>{{ progressPaymentBarValue }}%</span>
   </div>
   <button class="button">
     <div class="new-credit-card">
