--- a/src/app/shared/boards/progress-card/progress-card.component.scss
+++ b/src/app/shared/boards/progress-card/progress-card.component.scss
@@ -1,7 +1,7 @@
 @import '/src/styles/variables.scss';
 
 .grid-item {
-  max-width: 300px;
+  max-width: 100%;
   padding: 1rem;
   display: flex;
   flex-direction: row; // Cambiado de row a column para centrar el contenido
@@ -74,6 +74,42 @@
       transition: stroke-dashoffset 0.5s;
       stroke-linecap: round;
       stroke: map-get($map: $colors, $key: accent-primary);
+
+    }
+  }
+  .payment-card{
+    border-radius: 10px; // Hace que el elemento tenga esquinas redondeadas
+    max-width: 150px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; // Asegura la alineación vertical al centro
+    align-items: center; // Asegura la alineación horizontal al centro
+    color: map-get($colors, text-white);
+    background-color: map-get($colors, accent-primary);
+
+    .progress-circle {
+      margin-bottom: 10%;
+      transform: rotate(-90deg);
+      transform-origin: 50% 50%;
+
+    }
+
+    .progress-circle-back{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: stroke-dashoffset 0.5s;
+      stroke-linecap: round;
+    }
+    .progress-circle-progress {
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: stroke-dashoffset 0.5s;
+      stroke-linecap: round;
+      stroke: map-get($map: $colors, $key: accent-secondary);
 
     }
   }
