feature: balance between pco and losses

--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -25,6 +25,7 @@
     <app-overview-card
     [puntosColombia]="puntosColombia"
     [totalLosses]="totalLosses"
+    [balancePcoLosses]="balancePcoLosses"
     ></app-overview-card>
   </div>
 </div>
