--- a/src/app/shared/boards/overview-card/overview-card.component.html
+++ b/src/app/shared/boards/overview-card/overview-card.component.html
@@ -12,5 +12,11 @@
     <p>Total Losses:</p>
     <h2 class="value">{{totalLosses }}</h2>
   </div>
+  <div class="item-overview">
+    <img src="../../../../assets/icons/plus-slash-minus.svg" alt="balance"
+    class="icon">
+    <p>PCO vs Losses:</p>
+    <h2 class="value">{{balancePcoLosses}}</h2>
+  </div>
 </div>
 
