feature: refresh button

--- a/src/app/shared/core/header/header.component.html
+++ b/src/app/shared/core/header/header.component.html
@@ -6,6 +6,9 @@
   </div>
 
   <div class="actions-container">
+      <a href="home" class="refresh">
+        <img src="../../../../../assets/icons/arrow-clockwise.svg" alt="">
+      </a>
     <button class="upgrade-btn">Upgrade Plan</button>
   </div>
 </header>
