--- a/src/app/shared/boards/calendar-card/calendar-card.component.scss
+++ b/src/app/shared/boards/calendar-card/calendar-card.component.scss
@@ -2,8 +2,8 @@
 
 
 .grid-item {
-  max-width: 300px;
-  min-height: 150px;
+  max-width: auto;
+  min-height: auto;
   border-radius: 8px;
   padding: 1rem;
   display: flex;
@@ -14,11 +14,10 @@
   color: map-get($colors, text-primary);
   font-size: larger;
   margin: 2rem auto;
-
   .calendar {
-    max-width: 100%; /* Asegura que el calendario no exceda el ancho del grid-item */
+    width: 100%; /* Asegura que el calendario ocupe todo el ancho disponible del grid-item */
+    aspect-ratio: 1 / 1; /* Mantiene la cuadrícula siempre cuadrada */
     display: grid;
-    margin-left: 3%;
     grid-template-columns: repeat(7, 1fr);
   }
 
