--- a/src/app/shared/boards/progress-card/progress-card.component.html
+++ b/src/app/shared/boards/progress-card/progress-card.component.html
@@ -1,6 +1,6 @@
 <div class="grid-item">
   <div class="card">
-    <p class="tittle">Jineteo with {{ creditCardName }}</p>
+    <h2 class="tittle">Jineteo</h2>
     <svg class="progress-circle" width="100" height="100" viewBox="0 0 100 100">
       <circle class="progress-circle-back" cx="50" cy="50" r="45" fill="none" stroke="#eee" stroke-width="10"/>
       <circle class="progress-circle-progress" cx="50" cy="50" r="45" fill="none"  stroke-width="10"
@@ -9,7 +9,7 @@
     <span>{{ progressBarValue }}%</span>
   </div>
   <div class="payment-card">
-    <p class="tittle">Relax, you will do it</p>
+    <h2 class="tittle">Payment</h2>
     <svg class="progress-circle" width="100" height="100" viewBox="0 0 100 100">
       <circle class="progress-circle-back" cx="50" cy="50" r="45" fill="none" stroke="#eee" stroke-width="10"/>
       <circle class="progress-circle-progress" cx="50" cy="50" r="45" fill="none"  stroke-width="10"
@@ -17,7 +17,7 @@
     </svg>
     <span>{{ progressPaymentBarValue }}%</span>
   </div>
-  <button class="button">
+  <button class="button" (click)="goToNewCreditCard()">
     <div class="new-credit-card">
       <img src="../../../../assets/icons/plus.svg" alt=""
       class="img-plus">
