feature: making some improves

--- a/src/app/shared/boards/overview-card/overview-card.component.html
+++ b/src/app/shared/boards/overview-card/overview-card.component.html
@@ -10,12 +10,12 @@
   <div class="item-overview">
     <img src="../../../../assets/icons/graph-down-arrow.svg" alt="losses" class="icon">
     <p>Total Losses:</p>
-    <h2 class="value">{{totalLosses }}</h2>
+    <h2 class="value"> ${{totalLosses }}</h2>
   </div>
 
   <div class="item-overview">
     <img src="../../../../assets/icons/plus-slash-minus.svg" alt="balance" class="icon">
     <p>PCO vs Losses:</p>
-    <h2 class="value">{{balancePcoLosses}}</h2>
+    <h2 class="value"> ${{balancePcoLosses}}</h2>
   </div>
 </div>
